--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -583,3 +583,33 @@
  publisher = {ACM},
  OPTaddress = {New York, NY, USA},
 } 
+@INPROCEEDINGS{1690020, 
+author={Petrot, F. and Greiner, A. and Gomez, P.}, 
+booktitle={9\xth EUROMICRO Conference on Digital System Design: Architectures, Methods and Tools}, 
+title={On Cache Coherency and Memory Consistency Issues in NoC Based Shared Memory Multiprocessor SoC Architectures}, 
+year={2006}, 
+optmonth={0-0 }, 
+optvolume={}, 
+optnumber={}, 
+pages={53--60}, 
+keywords={NoC based shared memory multiprocessor SoC architecture;application specific multiprocessor SoC;cache coherency;memory consistency;network on chip;system on chip design;virtual memory;cache storage;microprocessor chips;network-on-chip;parallel architectures;shared memory systems;virtual storage;}, 
+doi={10.1109/DSD.2006.73}, 
+optISSN={},}
+
+@inproceedings{Baumann:2009:MNO:1629575.1629579,
+ author = {Baumann, Andrew and Barham, Paul and Dagand, Pierre-Evariste and Harris, Tim and Isaacs, Rebecca and Peter, Simon and Roscoe, Timothy and Sch\"{u}pbach, Adrian and Singhania, Akhilesh},
+ title = {The multikernel: a new {OS} architecture for scalable multicore systems},
+ booktitle = {Proceedings of the ACM SIGOPS 22\nd Symposium on Operating Systems Principles},
+ series = {SOSP '09},
+ year = {2009},
+ isbn = {978-1-60558-752-3},
+ OPTlocation = {Big Sky, Montana, USA},
+ pages = {29--44},
+ numpages = {16},
+ OPTurl = {http://doi.acm.org/10.1145/1629575.1629579},
+ doi = {10.1145/1629575.1629579},
+ acmid = {1629579},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+ keywords = {message passing, multicore processors, scalability, barrelfish},
+} 
