--- a/content.tex
+++ b/content.tex
@@ -296,7 +296,7 @@ In a similar manner we can introduce further implementation of the same language
 We employ existential types to store the differently typed states of all the components running in our simulated environment.
 Components are subsequently implemented as type class instances, giving us a straightforward way to access the existentially quantified values in our collection of states.
 
-\subsection{Type classes}
+\subsection{Type Classes}
 Type classes are naturally used for the eDSL encoding from the previous section \cite{Hall:1996:TCH:227699.227700,final_tagless_embedding}.
 
 Beyond this, we use type classes to express many other useful abstractions.
