--- a/content.tex
+++ b/content.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
 
 Simulation is often used to inspect various characteristics of a system.
-In the \soos project\footnote{See \url{http://www.soos-project.eu/} and \cite{soos} for details.} we inspect service-oriented aspects of operating systems.
+In the \soos project\footnote{See \url{http://www.soos-project.eu/} and \cite{soos} for details.} we investigate service-oriented aspects of operating systems.
 One part of the project requires to simulate the interactions between software components of an operating system (in the following: OS) and between
 OS and application software.
 
@@ -15,7 +15,7 @@ OS and application software.
 % A further issue is the scalability of the parallel system.
 
 \olcomment{new: --- >}
-The key point is: common operating systems' designs have multiple drawbacks.
+Common operating systems' designs have multiple drawbacks.
 The systems feature central synchronisation points for resource management and distribution; these hinder further scalability.
 Current commonly available OSes perform well on a handful of CPU cores, but they are not designed for thousands of cores!
 (However, we want to mention the Barrelfish research project\nolinebreak[4]  \cite{Baumann:2009:MNO:1629575.1629579} featuring advanced ideas for manycore architectures.)
