make it compile with lncs

--- a/footer.tex
+++ b/footer.tex
@@ -1,5 +1,5 @@
 % We recommend abbrvnat bibliography style.
-
+\begin{small}
 \bibliographystyle{abbrvnat}
 
 % The bibliography should be embedded for final submission.
@@ -15,5 +15,5 @@
 % P. Q. Smith, and X. Y. Jones. ...reference text...
 %
 % \end{thebibliography}
-
+\end{small}
 \end{document}
