--- a/content.tex
+++ b/content.tex
@@ -508,8 +508,8 @@ Two further options are either to make the coroutine execution concurrent using 
 %
 % This is the text of the appendix, if you need one.
 
-\acks
-
+%\acks
+\paragraph{Acknowledgments.}
 %Acknowledgments, if needed.
 This work was supported by the \soos project, sponsored by the European Commission under FP7-ICT-2009.8.1, Grant Agreement No.~248465.
 We thank Chung-chieh Shan and Oleg Kiselyov for valuable remarks on
