fixing the references

--- a/footer.tex
+++ b/footer.tex
@@ -1,6 +1,9 @@
 % We recommend abbrvnat bibliography style.
 \begin{small}
 \bibliographystyle{abbrvnat}
+%\bibliographystyle{splncs}
+%\bibliographystyle{}
+
 
 % The bibliography should be embedded for final submission.
 %% for now: use bibtex!
