--- a/header.tex
+++ b/header.tex
@@ -47,7 +47,7 @@
 %% ifthenelse
 \usepackage{xifthen}
 
-\usepackage{natbib}
+\usepackage[numbers,sectionbib]{natbib}
 \usepackage{url}
 \usepackage{doi}
 
