--- a/content.tex
+++ b/content.tex
@@ -15,9 +15,9 @@ OS and application software.
 % A further issue is the scalability of the parallel system.
 
 \olcomment{new: --- >}
-Common operating systems' designs have multiple drawbacks.
+Conventional operating systems often have multiple drawbacks due to their design.
 The systems feature central synchronisation points for resource management and distribution; these hinder further scalability.
-Current commonly available OSes perform well on a handful of CPU cores, but they are not designed for thousands of cores!
+Current commonly available systems perform well on a handful of CPU cores, but they are not designed for thousands of cores!
 (However, we want to mention the Barrelfish research project\nolinebreak[4]  \cite{Baumann:2009:MNO:1629575.1629579} featuring advanced ideas for manycore architectures.)
 Heterogeneous (\eg GPU+CPU, Cell BE), non-cache coherent architectures (\eg Intel SCC) and network-on-a-chip approaches are quite poorly supported.
 The emerging cloud computing era requires much greater scalability and security than we saw before; this requires new OS design directions.
@@ -35,7 +35,7 @@ The design decisions were:
 \item To simulate \emph{message passing} and \emph{shared memory} as the main forms of communication between software components.
 \item Achieve \emph{synchronization} between components through \emph{blocking} messaging.
 \item To have global \emph{ticks}, designating an abstract notion of progress.
-\item To observe the number of ticks a software component is active, waiting for a response after invoking another component, or idle.
+\item To observe the number of ticks a software component is active, waiting (for a response after invoking another component), or idle.
 \end{itemize}
 % If a blocking message is received, the reviever should suspend its current work and process the message.\olcomment{is this true?}
 A note on blocking messaging: when a blocking message is sent, the sender waits for an answer---regardless \emph{where} in the code of the sender the blocking \hs{invoke} method is called.
@@ -43,14 +43,16 @@ This means we required the notion of suspending a computation---it should be \em
 In the following we will show that using Haskell \cite{haskell-report}\cbcomment{I don't think we need to cite the haskell report for the haskell symposium} enabled us to implement this property in a nice way.
 The contributions of this paper include:
 \begin{itemize}
-\item A short overview of the \soosim simulator.
+%\item A short overview of the \soosim simulator.
 \item The description of the interface used to implement OS components in \soosim.
-\olcomment{Do \hs{createComponent} etc. really form a DSL? Say `interface'?}
-\cbcomment{I think DSL is wrong wording, interface is indeed better}
-\item The description of \emph{a} eDSL to describe applications that will run on a \soosim \emph{simulated} system.
+% \olcomment{Do \hs{createComponent} etc. really form a DSL? Say `interface'?}
+% \cbcomment{I think DSL is wrong wording, interface is indeed better}
+\item The description of \emph{an} eDSL to describe applications that will run on a \soosim \emph{simulated} system.
 % \item \olcomment{in case of success: The way to model "suspending
 %     computation" with heterogeneous data without using dynamic types.}
-\item The list of Haskell language features we found particularly useful in this project.
+\item The list of Haskell language features we found particularly
+  useful in this project. \olcomment{+ reasoning WHY they are useful,
+    + explanation what are they}
 \end{itemize}
 \soosim has been released on Hackage.\footnote{Issue \textsf{cabal install SoOSiM} to install \soosim. See also: \url{http://github.com/christiaanb/SoOSiM}.}
 %% release is not a paper contribution, unfortunately!
@@ -128,7 +130,7 @@ In that case the component will not be executed by the simulator during a \emph{
 
 The simulator keeps several statistics with regards to the components, including how many ticks a component was either: active, waiting, or idle.
 When a component makes progress during a tick, it is considered \emph{active}.
-When a component does not make progress because it is blocked on an invocation, and no response was available, the component is designated as \emph{waiting}.
+When a component does not make progress because it is blocked on an invocation, and no response was available, the component is counted as \emph{waiting}.
 A component not making progress because it has an empty message queue, and having indicated that it does not want to receive \emph{null} messages, is designated as \emph{idle}.
 
 \subsection{OS Component Descriptions}
@@ -137,7 +139,7 @@ In case of \soosim, such a function is executed within the context of the simula
 
 Because the function is executed within the monad, it can have \emph{side-effects} such as sending messages to other components, or reading the local memory of a node.
 In addition, the function can be temporarily suspended at (almost) any point in the code.
-\soosim needs to be able to suspend the execution of a function such that we are able to emulate synchronous message passing between components, a subject further elaborated later on.
+\soosim needs to be able to suspend the execution of a function so that we are able to emulate synchronous message passing between components, which we will return to later.
 
 We describe a component as a function that receives a user-defined internal state as its first argument and a value of type \hs{SimEvent} as its second argument.
 The result of this function is the internal state.
@@ -152,9 +154,9 @@ We thus have the following \emph{general} type signature for a component:
 component :: State -> SimEvent -> SimM State
 \end{code}
 
-The simulator monad \hs{SimM} is described in Figure~\ref{fig:code-simm} in Section~\ref{sec:impl-monads}.
+The simulator monad \hs{SimM} is described in Figure~\ref{fig:code-simm} in Section~\ref{sec:impl-monads}.\olcomment{BAD}
 The user-defined internal \hs{state} can be used to store any information that needs to perpetuate across simulator ticks.
-The type \hs{State} should be read as a place holder for any (user-defined) data type; there is no actual predefined \hs{State} data type.
+The type \hs{State} should be read as a placeholder for any (user-defined) data type; there is no actual predefined \hs{State} data type.
 
 To include a component description in the simulator, the developer will have to create an instance of the \hs{ComponentIface} \emph{type class}.
 % A \emph{type class} in Haskell can be compared to an interface
@@ -186,7 +188,7 @@ Whenever a component uses this function it will be temporarily suspended by the 
 Several simulator ticks might pass before the response.
 Once the response is available the simulator resumes the execution of the calling component.
 \item {\hs{invokeAsync}}
-sends a message to another component and register a handler with the simulator to process the response.
+sends a message to another component and registers a handler with the simulator to process the response.
 In a contrast to \hs{invoke}, using this function will \emph{not} suspend the execution of the component.
 \item {\hs{respond}}
 sends a message to another component as a response to an invocation.
@@ -222,7 +224,7 @@ As a solution we essentially mechanised the creation of the FSM using the notion
 When a developer uses the \hs{invoke} function, two things actually happen:
 \begin{itemize}
   \item A message is send to the invoked component (callee).
-  \item The remaining computation of the caller is suspended and stored by simulator, ready to be scheduled once a response to the invocation arrives.
+  \item The remaining computation of the caller is suspended and stored by the simulator, ready to be scheduled once a response to the invocation arrives.
 \end{itemize}
 Every call to \hs{invoke} hence corresponds to an explicit state transition, but without the burden of explicit state-keeping.
 We achieved suspendability using coroutines~\cite{coroutines}, more specifically, a coroutine monad transformer~\cite{cmt}.
@@ -235,8 +237,8 @@ We however do not want to \emph{pollute} our application descriptions with calls
 Nor do we want to be forced to describe our application in a monadic style.
 Additionally, we want to be in control which interactions between OS and application are exactly simulated, without having to change either the descriptions of the OS modules or the application when we want to observe different aspects.
 
-For the above reasons we have decided to make use of embedded languages for the definitions of our applications.
-The idea is to specify an application once in a self-created embedded language and define different interpretations for the embedded language constructs as the observations of the interaction between application and OS\nolinebreak[3]  \cite{Hofer:2008:PED:1449913.1449935}.
+For the above reasons we have decided to use embedded languages for the definitions of our applications.
+The idea is to specify an application once in a self-created embedded language and to define different interpretations for the embedded language constructs as the observations of the interaction between application and OS\nolinebreak[3]  \cite{Hofer:2008:PED:1449913.1449935}.
 
 Following the \emph{final tagless} \cite{final_tagless_embedding} encoding of embedded languages in Haskell, we use a type class to define the language constructs.
 As an example we demonstrate a mini functional language with mutable references.\olcomment{was: "running example".}
@@ -274,13 +276,13 @@ instance Symantics RefMemAcc where
   drf x = RMA $ do
     i     <-- foo x
     mmId  <-- componentLookup "MemoryManager"
-    fmap unmashal $ invoke mmId (marshal (Read i))
+    fmap unmarshal $ invoke mmId (marshal (Read i))
 
   x =: y = RMA $ do
     i     <-- foo x
     v     <-- bar y
     mmId  <-- componentLookup "MemoryManager"
-    fmap unmashal $ invoke mmId (mashal (Write i v))
+    fmap unmarshal $ invoke mmId (marshal (Write i v))
 \end{code}
 \vspace{-0.5em}
 \caption{Observing memory access (partial definition).}
@@ -292,11 +294,13 @@ instance Symantics RefMemAcc where
 \paragraph{Final tagless embedding.}
 \citeauthor{final_tagless_embedding} have demonstrated how a typed interpreter of a typed language can be tagless \cite{final_tagless_embedding}.
 This approach does not use GADTs or dependent types.
-The target language types are represented as host language types, object terms are encoded as calls to host language functions. With type classes \citeauthor{final_tagless_embedding} make it possible to express, \eg an interpreter and an compiler of the same language in a flexible manner.
+The target language types are represented as host language types, object terms are encoded as calls to host language functions. With type classes \citeauthor{final_tagless_embedding} make it possible to express, \eg an interpreter and a compiler of the same language in a flexible manner.
 \citeauthor{Hofer:2008:PED:1449913.1449935} do a similar work \cite{Hofer:2008:PED:1449913.1449935}, but focus on different interpretations.
 This matches our intentions.
 We use our above example of a small language with mutable references.
-If we want to observe memory interactions in a more detail, we embrace an additional implementation of the language, where the functions for the memory interaction are exactly studied and basically ignore the observation of other parts of the language.
+If we want to observe memory interactions in more detail, we embrace
+an additional implementation of the language, where the functions for
+the memory interaction are exactly studied, leaving out of consideration other parts of the language.\olcomment{wording!}
 In a similar manner we can introduce further implementation of the same language with different properties.
 
 \section{Features We Used}
@@ -349,22 +353,21 @@ We use a monad called \hs{SimM} to capture the \emph{state} of the simulator.
 The implementation of \hs{SimM}\hspace{-1pt}, sketched in Figure~\ref{fig:code-simm}, enables us to reach the main implementation goal: the ultimate suspension and resumption of the components upon message passing.
 %% negative hspace to move the coma!
 To suspend a computation in the current component we can now merely write \hs{request componentId}, where the \hs{componentId} is the unique ID of some other component.
-The suspending of a component is nothing else than sending a outgoing message in the name of the component and blocking the sender until a response.
-To continue the execution of a resumeable computation we issue \hs{resume} \mbox{\hs{computation}.} %% hackery to get spaces right
+The suspending of a component is nothing else than sending an outgoing message in the name of the component and blocking the sender until a response.
+To continue the execution of a resumable computation we issue \hs{resume} \mbox{\hs{computation}.} %% hackery to get spaces right
 
 
 \subsection{Coroutines}
 \label{sec:impl-coroutines}
-As we mentioned above and as one could infer from Figure~\ref{fig:code-simm}, the implementation makes use of the coroutines~\cite{coroutines}.
+As we mentioned above and as one could infer from Figure~\ref{fig:code-simm}, the implementation uses coroutines~\cite{coroutines}.
 With this concept we capture the notion of multiple suspending and resuming computations.
 The need in such a behaviour arises naturally with the blocking message passing between components.
 We utilise \textsf{Control.Monad.Coroutine} \cite{cmt} to express coroutines.
 
 \subsection{Dynamic Types}
-We use dynamic types \cite{Abadi:1991:DTS:103135.103138} as `the other side' of the type classes: we need to communicate heterogeneous types over a typed channel, and there is no option to know all the types-to-transmit at the moment of the channel definition.
+We use dynamic types \cite{Abadi:1991:DTS:103135.103138} as `the other side'\olcomment{a reviewer does not like this!} of the type classes: we need to communicate heterogeneous types over a typed channel, and there is no option to know all the types-to-transmit at the moment of the channel definition.
 
-The \emph{origin} for the need of dynamic types lies in the suspension functor of our coroutines.
-More specifically, the \hs{response} field, that designates the type of the response returned after an invocation (see Figure~\ref{fig:code-simm}).
+The \emph{origin} for the need of dynamic types lies in the suspension functor of our coroutines, more specifically, in the \hs{response} field, that designates the type of the response returned after an invocation (see Figure~\ref{fig:code-simm}).
 This field would be different for every component we want to invoke, as components should be able to communicate data of any type. %% kind is the type of types, was not meant here as such, I assume
 We have only been able to encode this aspect in the suspension functor using dynamic types.
 
@@ -446,8 +449,8 @@ OMNeT++ \cite{omnet} is a C++-based discrete event simulator with focus on paral
 This work is in a sense dual to ours: we simulate an OS.
 \citeauthor{house} modified GHC run-time system to allow code execution on bare metal.
 In House, OS modules are executed within the \hs{Hardware} monad, allowing direct interaction with real hardware.
-This approach is comparable with our \hs{SimM} monad.
-However, as we are more concerned with interaction of OS modules, House in not suitable for our purposes:  OS modules in House must be implemented in full detail.
+This approach is comparable to our \hs{SimM} monad.
+However, as we are more concerned with interaction of OS modules, House is not suitable for our purposes:  OS modules in House must be implemented in full detail.
 
 Barrelfish \cite{Baumann:2009:MNO:1629575.1629579} is an OS in which domain-specific languages are used, amongst other purposes, to define driver interfaces \cite{barrelfish}.
 These embedded languages are also implemented in Haskell.
@@ -497,7 +500,10 @@ We are currently actively researching these issues.
 \paragraph{Concurrency.}
 One aspect of the future work is the concurrent \soosim.
 One option is to use Concurrent Haskell \cite{ConcHs}, it provides (concurrent) green threads.
-However, it would also require to use software transactional memory \cite{springerlink:10.1007/s004460050028} because of multiple writes to the same data.
+However, we would also need to use software transactional memory
+\cite{springerlink:10.1007/s004460050028} because of multiple writes
+to the same data. (Some other options, like locks are also viable, but
+less well supported in Haskell.)
 Examples of fruitful combinations of this concept with other ones include papers by \citeauthor{Harris:2008:CMT:1378704.1378725} \cite{Harris:2008:CMT:1378704.1378725} and \citeauthor{Bieniusa:2010:BAA:1835698.1835714} \cite{Bieniusa:2010:BAA:1835698.1835714,springerlink:10.1007/978-3-642-25959-3_2}.
 Another option would be to use a \emph{parallel} Haskell like Multicore Haskell \cite{marlow:rsm}, \hs{Par} monad \cite{par-monad} or Eden \cite{eden}.
 The `multiple writes' issue, however, needs some further handling in this case.
